--- a/hint2mint/project/version2/components/blog-section.html
+++ b/hint2mint/project/version2/components/blog-section.html
@@ -1,124 +1,51 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>Hint2Mint</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<div class="container">
+  <div class="row justify-content-center mb-5">
+    <div class="col-md-8 text-center">
+      <h2 class="text-black h1 site-section-heading text-center">Blog</h2>
+    </div>
+  </div>
 
-    
-    <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
-    <link rel="stylesheet" href="../fonts/icomoon/style.css">
-
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/jquery-ui.css">
-    <link rel="stylesheet" href="../css/owl.carousel.min.css">
-    <link rel="stylesheet" href="../css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="../css/owl.theme.default.min.css">
-
-    <link rel="stylesheet" href="../css/jquery.fancybox.min.css">
-
-    <link rel="stylesheet" href="../css/bootstrap-datepicker.css">
-
-    <link rel="stylesheet" href="../fonts/flaticon/font/flaticon.css">
-
-    <link rel="stylesheet" href="../css/aos.css">
-
-    <link rel="stylesheet" href="../css/style.css">
-    <script src='jquery.js' type='text/javascript'></script>
-
-
-    
-  </head>
-  
-
-
-
-  <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
-    <div class="site-section border-bottom" id="team-section"> </div>
-
-    <section class="site-section" id="blog-section">
-      <div class="container">
-        <div class="row justify-content-center mb-5">
-          <div class="col-md-8 text-center">
-            <h2 class="text-black h1 site-section-heading text-center">Blog</h2>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
-            <div class="h-entry">
-              <a href="../pages/whichsector.html"><img src="https://wealthcoachforwomen.net/wp-content/uploads/2018/07/401k.jpg" alt="Image" class="img-fluid"></a>
-              <h2 class="font-size-regular"><a href="../pages/whichsector.html">Which sector?</a></h2>
-              <div class="meta mb-4">Keshina Goel <span class="mx-2">&bullet;</span> May 20, 2020<span class="mx-2">&bullet;</span></div>
-              <p>Due to the ongoing pandemic in the entire world the major four industries booming are:
-                1. Pharmaceutical industries
-                With the virus prevailing there is an enormous demand </p>
-              <p><a href="../pages/whichsector.html">Continue Reading...</a></p>
-            </div> 
-          </div>
-          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
-            <div class="h-entry">
-              <a href="../pages/blog2.html"><img src="https://img.etimg.com/thumb/width-640,height-480,imgsize-56176,resizemode-1,msid-70345874/sensex-nifty-fall-for-4th-day-on-weakness-in-sbi-hdfc-twins.jpg" alt="Image" class="img-fluid"></a>
-              <h2 class="font-size-regular"><a href="../pages/blog2.html">Algorithmic Trading </a></h2>
-              <div class="meta mb-4">Kimaya<span class="mx-2">&bullet;</span> May 20, 2020<span class="mx-2">&bullet;</span></div>
-              <p>Nifty includes 50 largest and most liquid companies out of approximately 1600 companies traded on NSE, captures approximately 65% of its float-adjusted</p>
-              <p><a href="../pages/blog2.html">Continue Reading...</a></p>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
-            <div class="h-entry">
-              <a href="../pages/rsi.html"><img src="https://www.pngitem.com/pimgs/m/76-766672_vector-illustration-of-financial-investor-invests-money-cartoon.png" alt="Image" class="img-fluid"></a>
-              <h2 class="font-size-regular"><a href="../pages/rsi.html">Relative Strength Index</a></h2>
-              <div class="meta mb-4">Keshina Goel <span class="mx-2">&bullet;</span> May 20, 2020<span class="mx-2">&bullet;</span></div>
-              <p> RSI is a momentum oscillator that measures the speed and change of price movements which Generally, when RSI goes beyond the 70</p>
-              <p><a href="../pages/rsi.html">Continue Reading...</a></p>
-            </div>
-          </div>
-         
-          
-        </div>
+  <div class="row">
+    <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
+      <div class="h-entry">
+        <a href="../pages/whichsector.html"><img
+            src="https://wealthcoachforwomen.net/wp-content/uploads/2018/07/401k.jpg" alt="Image" class="img-fluid"></a>
+        <h2 class="font-size-regular"><a href="../pages/whichsector.html">Which sector?</a></h2>
+        <div class="meta mb-4">Keshina Goel <span class="mx-2">&bullet;</span> May 20, 2020<span
+            class="mx-2">&bullet;</span></div>
+        <p>Due to the ongoing pandemic in the entire world the major four industries booming are:
+          1. Pharmaceutical industries
+          With the virus prevailing there is an enormous demand </p>
+        <p><a href="../pages/whichsector.html">Continue Reading...</a></p>
       </div>
-    </section>
-
-<!-- .site-wrap -->
-
-<script src="../js/jquery-3.3.1.min.js"></script>
-<script src="../js/jquery-migrate-3.0.1.min.js"></script>
-<script src="../js/jquery-ui.js"></script>
-<script src="../js/popper.min.js"></script>
-<script src="../js/bootstrap.min.js"></script>
-<script src="../js/owl.carousel.min.js"></script>
-<script src="../js/jquery.stellar.min.js"></script>
-<script src="../js/jquery.countdown.min.js"></script>
-<script src="../js/bootstrap-datepicker.min.js"></script>
-<script src="../js/jquery.easing.1.3.js"></script>
-<script src="../js/aos.js"></script>
-<script src="../js/jquery.fancybox.min.js"></script>
-<script src="../js/jquery.sticky.js"></script>
-
-<script src="../js/typed.js"></script>
-
-
-          <script>
-          var typed = new Typed('.typed-words', {
-          strings: ["Web Apps"," WordPress"," Mobile Apps"],
-          typeSpeed: 80,
-          backSpeed: 80,
-          backDelay: 4000,
-          startDelay: 1000,
-          loop: true,
-          showCursor: true
-          });
-          </script>
-
-<script src="../js/main.js"></script>
-
-<script src="../js/smtp.js"></script>
-<script type="text/javascript">
-  
-</script>
+    </div>
+    <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
+      <div class="h-entry">
+        <a href="../pages/blog2.html"><img
+            src="https://img.etimg.com/thumb/width-640,height-480,imgsize-56176,resizemode-1,msid-70345874/sensex-nifty-fall-for-4th-day-on-weakness-in-sbi-hdfc-twins.jpg"
+            alt="Image" class="img-fluid"></a>
+        <h2 class="font-size-regular"><a href="../pages/blog2.html">Algorithmic Trading </a></h2>
+        <div class="meta mb-4">Kimaya<span class="mx-2">&bullet;</span> May 20, 2020<span class="mx-2">&bullet;</span>
+        </div>
+        <p>Nifty includes 50 largest and most liquid companies out of approximately 1600 companies traded on NSE,
+          captures approximately 65% of its float-adjusted</p>
+        <p><a href="../pages/blog2.html">Continue Reading...</a></p>
+      </div>
+    </div>
+    <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
+      <div class="h-entry">
+        <a href="../pages/rsi.html"><img
+            src="https://www.pngitem.com/pimgs/m/76-766672_vector-illustration-of-financial-investor-invests-money-cartoon.png"
+            alt="Image" class="img-fluid"></a>
+        <h2 class="font-size-regular"><a href="../pages/rsi.html">Relative Strength Index</a></h2>
+        <div class="meta mb-4">Keshina Goel <span class="mx-2">&bullet;</span> May 20, 2020<span
+            class="mx-2">&bullet;</span></div>
+        <p> RSI is a momentum oscillator that measures the speed and change of price movements which Generally, when RSI
+          goes beyond the 70</p>
+        <p><a href="../pages/rsi.html">Continue Reading...</a></p>
+      </div>
+    </div>
 
 
-
-</body>
-</html>
+  </div>
+</div>
