--- a/hint2mint/project/version2/components/testimonial.html
+++ b/hint2mint/project/version2/components/testimonial.html
@@ -1,141 +1,121 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>Hint2Mint</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-md-8 text-center">
+      <h2 class="text-black h1 site-section-heading text-center">Testimonials</h2>
+    </div>
+  </div>
+</div>
+<div class="slide-one-item home-slider owl-carousel">
+  <div>
+    <div class="testimonial">
 
-    <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
-    <link rel="stylesheet" href="../fonts/icomoon/style.css">
+      <blockquote class="mb-5">
+        <p>&ldquo;Respected ma'am,
+          As planned, the activity of self introspection really helped me dive down to know myself more accurately and
+          even better, the group interaction gave me so many ideas and viewpoints of different people regarding selling,
+          marketing and branding. above that, the story telling question helped us realise how far we have come and how
+          much we are yet to go in this path of success.
+          thankyou.&rdquo;</p>
+      </blockquote>
 
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/jquery-ui.css">
-    <link rel="stylesheet" href="../css/owl.carousel.min.css">
-    <link rel="stylesheet" href="../css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="../css/owl.theme.default.min.css">
+      <figure class="mb-4 d-flex align-items-center justify-content-center">
 
-    <link rel="stylesheet" href="../css/jquery.fancybox.min.css">
+        <div><img src="../images/image1.jpeg" alt="Image" class="w-50 img-fluid mb-3"></div>
 
-    <link rel="stylesheet" href="../css/bootstrap-datepicker.css">
+        <p>Nimisha Sharaff</p>
+      </figure>
+    </div>
+  </div>
+  <div>
+    <div class="testimonial">
 
-    <link rel="stylesheet" href="../fonts/flaticon/font/flaticon.css">
+      <blockquote class="mb-5">
+        <p>&ldquo;Having no pre-knowledge about Trading and various Investments schemes, got a major boost into
+          exploring the vast sea of Trading because of team. Their work is commendable ,also well organised. Credits to
+          the hastle free online webinars organised by them, was able to explore and understand better the concept of
+          Trading by sitting at home itself. Amazing Consultation Sevices !!&rdquo;</p>
+      </blockquote>
+      <figure class="mb-4 d-flex align-items-center justify-content-center">
 
-    <link rel="stylesheet" href="../css/aos.css">
+        <div><img src="../images/image1.jpeg" alt="Image" class="w-50 img-fluid mb-3"></div>
 
-    <link rel="stylesheet" href="../css/style.css">
-    <script src='jquery.js' type='text/javascript'></script>
-    
-  </head>
-  <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
-  
+        <p>Aayush Jain</p>
+      </figure>
 
-  
+    </div>
+  </div>
 
-   
-    
+  <div>
+    <div class="testimonial">
 
-   
-    
-   
-    <section class="site-section testimonial-wrap">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-md-8 text-center">
-            <h2 class="text-black h1 site-section-heading text-center">Testimonials</h2>
-          </div>
-        </div>
-      </div>
-      <div class="slide-one-item home-slider owl-carousel">
-          <div>
-            <div class="testimonial">
-              
-              <blockquote class="mb-5">
-                <p>&ldquo;Respected ma'am,
-                  As planned, the activity of self introspection really helped me dive down to know myself more accurately and even better, the group interaction gave me so many ideas and viewpoints of different people regarding selling, marketing and branding. above that, the story telling question helped us realise how far we have come and how much we are yet to go in this path of success.
-                  thankyou.&rdquo;</p>
-              </blockquote>
+      <blockquote class="mb-5">
+        <p>&ldquo;I have attended almost every webinar of Hint2mint, it was an excellent experience to attend the
+          session because of which I have managed to cure the issue which I was facing earlier. The webinar content was
+          excellent as well as easy to understand, I got my all basics concepts clarified.
+          thanks for everything keep up the task.
+          wishing you all the best for your future.&rdquo;</p>
+      </blockquote>
+      <figure class="mb-4 d-flex align-items-center justify-content-center">
 
-              <figure class="mb-4 d-flex align-items-center justify-content-center">
-                
-                <p>Nimisha Sharaff</p>
-              </figure>
-            </div>
-          </div>
-          <div>
-            <div class="testimonial">
+        <div><img src="../images/image1.jpeg" alt="Image" class="w-50 img-fluid mb-3"></div>
 
-              <blockquote class="mb-5">
-                <p>&ldquo;Having no pre-knowledge about Trading and various Investments schemes, got a major boost into exploring the vast sea of Trading because of team. Their work is commendable ,also well organised. Credits to the hastle free online webinars organised by them, was able to explore and understand better the concept of Trading by sitting at home itself. Amazing Consultation Sevices !!&rdquo;</p>
-              </blockquote>
-              <figure class="mb-4 d-flex align-items-center justify-content-center">
-                
-                <p>Aayush Jain</p>
-              </figure>
-              
-            </div>
-          </div>
-
-          <div>
-            <div class="testimonial">
-
-              <blockquote class="mb-5">
-                <p>&ldquo;I have attended almost every webinar of Hint2mint, it was an excellent experience to attend the session because of which I have managed to cure the issue which I was facing earlier. The webinar content was excellent as well as easy to understand, I got my all basics concepts clarified.
-                  thanks for everything keep up the task.
-                       wishing you all the best for your future.&rdquo;</p>
-              </blockquote>
-              <figure class="mb-4 d-flex align-items-center justify-content-center">
-                
-                <p>Shadab</p>
-              </figure>
-
-              
-            </div>
-          </div>
-
-         
-
-        </div>
-    </section>
+        <p>Shadab</p>
+      </figure>
 
 
-  </div> <!-- .site-wrap -->
+    </div>
+  </div>
 
-  <script src="../js/jquery-3.3.1.min.js"></script>
-  <script src="../js/jquery-migrate-3.0.1.min.js"></script>
-  <script src="../js/jquery-ui.js"></script>
-  <script src="../js/popper.min.js"></script>
-  <script src="../js/bootstrap.min.js"></script>
-  <script src="../js/owl.carousel.min.js"></script>
-  <script src="../js/jquery.stellar.min.js"></script>
-  <script src="../js/jquery.countdown.min.js"></script>
-  <script src="../js/bootstrap-datepicker.min.js"></script>
-  <script src="../js/jquery.easing.1.3.js"></script>
-  <script src="../js/aos.js"></script>
-  <script src="../js/jquery.fancybox.min.js"></script>
-  <script src="../js/jquery.sticky.js"></script>
-  
-  <script src="../js/typed.js"></script>
-  
-  
-            <script>
-            var typed = new Typed('.typed-words', {
-            strings: ["Web Apps"," WordPress"," Mobile Apps"],
-            typeSpeed: 80,
-            backSpeed: 80,
-            backDelay: 4000,
-            startDelay: 1000,
-            loop: true,
-            showCursor: true
-            });
-            </script>
-  
-  <script src="../js/main.js"></script>
-  
-  <script src="../js/smtp.js"></script>
-  <script type="text/javascript">
-    
-  </script>
-  
 
-  </body>
-</html>
+
+</div>
+
+<script>
+  var siteCarousel = function () {
+		if ( $('.nonloop-block-13').length > 0 ) {
+			$('.nonloop-block-13').owlCarousel({
+		    center: false,
+		    items: 1,
+		    loop: true,
+				stagePadding: 0,
+		    margin: 0,
+		    autoplay: true,
+		    nav: true,
+				navText: ['<span class="icon-arrow_back">', '<span class="icon-arrow_forward">'],
+		    responsive:{
+	        600:{
+	        	margin: 0,
+	        	nav: true,
+	          items: 2
+	        },
+	        1000:{
+	        	margin: 0,
+	        	stagePadding: 0,
+	        	nav: true,
+	          items: 3
+	        },
+	        1200:{
+	        	margin: 0,
+	        	stagePadding: 0,
+	        	nav: true,
+	          items: 4
+	        }
+		    }
+			});
+		}
+
+		$('.slide-one-item').owlCarousel({
+	    center: false,
+	    items: 1,
+	    loop: true,
+			stagePadding: 0,
+	    margin: 0,
+	    autoplay: true,
+	    pauseOnHover: false,
+	    nav: true,
+	    navText: ['<span class="icon-keyboard_arrow_left">', '<span class="icon-keyboard_arrow_right">']
+	  });
+	};
+	siteCarousel();
+
+</script>
