--- a/hint2mint/project/version2/components/testimonial.html
+++ b/hint2mint/project/version2/components/testimonial.html
@@ -20,7 +20,7 @@
 
       <figure class="mb-4 d-flex align-items-center justify-content-center">
 
-        <div><img src="../images/image1.jpeg" alt="Image" class="w-50 img-fluid mb-3"></div>
+        <div><img src="images/default-person.png" alt="Image" class="w-50 img-fluid mb-3"></div>
 
         <p>Nimisha Sharaff</p>
       </figure>
@@ -37,7 +37,7 @@
       </blockquote>
       <figure class="mb-4 d-flex align-items-center justify-content-center">
 
-        <div><img src="../images/image1.jpeg" alt="Image" class="w-50 img-fluid mb-3"></div>
+        <div><img src="images/default-person.png" alt="Image" class="w-50 img-fluid mb-3"></div>
 
         <p>Aayush Jain</p>
       </figure>
@@ -57,7 +57,7 @@
       </blockquote>
       <figure class="mb-4 d-flex align-items-center justify-content-center">
 
-        <div><img src="../images/image1.jpeg" alt="Image" class="w-50 img-fluid mb-3"></div>
+        <div><img src="images/default-person.png" alt="Image" class="w-50 img-fluid mb-3"></div>
 
         <p>Shadab</p>
       </figure>
