--- a/hint2mint/project/version2/components/work-section.html
+++ b/hint2mint/project/version2/components/work-section.html
@@ -9,8 +9,8 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-6 col-lg-4">
-      <a href="../images/img_1.jpg" class="media-1" data-fancybox="gallery">
-        <img src="../images/img_1.jpg" alt="Image" class="img-fluid">
+      <a href="/images/img_1.jpg" class="media-1" data-fancybox="gallery">
+        <img src="images/img_1.jpg" alt="Image" class="img-fluid">
         <div class="media-1-content">
           <h2>Risks and Rewards</h2>
           <span class="category">of investing</span>
@@ -18,8 +18,8 @@
       </a>
     </div>
     <div class="col-md-6 col-lg-4">
-      <a href="../images/img_2.jpg" class="media-1" data-fancybox="gallery">
-        <img src="../images/img_2.jpg" alt="Image" class="img-fluid">
+      <a href="images/img_2.jpg" class="media-1" data-fancybox="gallery">
+        <img src="images/img_2.jpg" alt="Image" class="img-fluid">
         <div class="media-1-content">
           <h2>Requirements</h2>
           <span class="category">KYC documents</span>
@@ -27,8 +27,8 @@
       </a>
     </div>
     <div class="col-md-6 col-lg-4">
-      <a href="../images/img_3.jpg" class="media-1" data-fancybox="gallery">
-        <img src="../images/img_3.jpg" alt="Image" class="img-fluid">
+      <a href="images/img_3.jpg" class="media-1" data-fancybox="gallery">
+        <img src="images/img_3.jpg" alt="Image" class="img-fluid">
         <div class="media-1-content">
           <h2>Key point</h2>
           <span class="category">to remember</span>
@@ -37,8 +37,8 @@
     </div>
 
     <div class="col-md-6 col-lg-4">
-      <a href="../images/img_4.jpg" class="media-1" data-fancybox="gallery">
-        <img src="../images/img_4.jpg" alt="Image" class="img-fluid">
+      <a href="images/img_4.jpg" class="media-1" data-fancybox="gallery">
+        <img src="images/img_4.jpg" alt="Image" class="img-fluid">
         <div class="media-1-content">
           <h2>The Art of Investing</h2>
           <span class="category">Webinar</span>
@@ -46,8 +46,8 @@
       </a>
     </div>
     <div class="col-md-6 col-lg-4">
-      <a href="../images/img_5.jpg" class="media-1" data-fancybox="gallery">
-        <img src="../images/img_5.jpg" alt="Image" class="img-fluid">
+      <a href="images/img_5.jpg" class="media-1" data-fancybox="gallery">
+        <img src="images/img_5.jpg" alt="Image" class="img-fluid">
         <div class="media-1-content">
           <h2>Understanding Market Breadth</h2>
           <span class="category">Webinar</span>
@@ -55,8 +55,8 @@
       </a>
     </div>
     <div class="col-md-6 col-lg-4">
-      <a href="../images/img_6.jpg" class="media-1" data-fancybox="gallery">
-        <img src="../images/img_6.jpg" alt="Image" class="img-fluid">
+      <a href="images/img_6.jpg" class="media-1" data-fancybox="gallery">
+        <img src="images/img_6.jpg" alt="Image" class="img-fluid">
         <div class="media-1-content">
           <h2>Jargons Of Financial Market</h2>
           <span class="category">Webinar</span>
