--- a/hint2mint/project/version2/components/team-section.html
+++ b/hint2mint/project/version2/components/team-section.html
@@ -16,7 +16,7 @@
     <center>
     <div class="col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="300">
       <div class="person text-center">
-        <img src="../images/image1.jpeg" alt="Image" class="img-fluid rounded-circle w-50 mb-5">
+        <img src="images/image1.jpeg" alt="Image" class="img-fluid rounded-circle w-50 mb-5">
         <h3>Dixita Jain</h3>
         <p class="position text-muted">Founder & Director</p>
         <p class="mb-4">Experienced Research Analyst and Assurance Associate with a demonstrated history of working in the Corporate world. 
