--- a/hint2mint/project/version2/components/blogs/blog-section.html
+++ b/hint2mint/project/version2/components/blogs/blog-section.html
@@ -8,41 +8,41 @@
   <div class="row">
     <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
       <div class="h-entry">
-        <a href="../pages/whichsector.html"><img
+        <a href="../pages/blogs/blog1.html"><img
             src="https://wealthcoachforwomen.net/wp-content/uploads/2018/07/401k.jpg" alt="Image" class="img-fluid"></a>
-        <h2 class="font-size-regular"><a href="../pages/whichsector.html">Which sector?</a></h2>
+        <h2 class="font-size-regular"><a href="../pages/blogs/blog1.html">Which sector?</a></h2>
         <div class="meta mb-4">Keshina Goel <span class="mx-2">&bullet;</span> May 20, 2020<span
             class="mx-2">&bullet;</span></div>
         <p>Due to the ongoing pandemic in the entire world the major four industries booming are:
           1. Pharmaceutical industries
           With the virus prevailing there is an enormous demand </p>
-        <p><a href="../pages/whichsector.html">Continue Reading...</a></p>
+        <p><a href="../pages/blogs/blog1.html">Continue Reading...</a></p>
       </div>
     </div>
     <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
       <div class="h-entry">
-        <a href="../pages/blog2.html"><img
+        <a href="../pages/blogs/blog2.html"><img
             src="https://img.etimg.com/thumb/width-640,height-480,imgsize-56176,resizemode-1,msid-70345874/sensex-nifty-fall-for-4th-day-on-weakness-in-sbi-hdfc-twins.jpg"
             alt="Image" class="img-fluid"></a>
-        <h2 class="font-size-regular"><a href="../pages/blog2.html">Algorithmic Trading </a></h2>
+        <h2 class="font-size-regular"><a href="../pages/blogs/blog2.html">Algorithmic Trading </a></h2>
         <div class="meta mb-4">Kimaya<span class="mx-2">&bullet;</span> May 20, 2020<span class="mx-2">&bullet;</span>
         </div>
         <p>Nifty includes 50 largest and most liquid companies out of approximately 1600 companies traded on NSE,
           captures approximately 65% of its float-adjusted</p>
-        <p><a href="../pages/blog2.html">Continue Reading...</a></p>
+        <p><a href="../pages/blogs/blog2.html">Continue Reading...</a></p>
       </div>
     </div>
     <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
       <div class="h-entry">
-        <a href="../pages/rsi.html"><img
+        <a href="../pages/blogs/blog3.html"><img
             src="https://www.pngitem.com/pimgs/m/76-766672_vector-illustration-of-financial-investor-invests-money-cartoon.png"
             alt="Image" class="img-fluid"></a>
-        <h2 class="font-size-regular"><a href="../pages/rsi.html">Relative Strength Index</a></h2>
+        <h2 class="font-size-regular"><a href="../pages/blogs/blog3.html">Relative Strength Index</a></h2>
         <div class="meta mb-4">Keshina Goel <span class="mx-2">&bullet;</span> May 20, 2020<span
             class="mx-2">&bullet;</span></div>
         <p> RSI is a momentum oscillator that measures the speed and change of price movements which Generally, when RSI
           goes beyond the 70</p>
-        <p><a href="../pages/rsi.html">Continue Reading...</a></p>
+        <p><a href="../pages/blogs/blog3.html">Continue Reading...</a></p>
       </div>
     </div>
 
