--- a/hint2mint/project/version2/components/contact-section/contact-section.html
+++ b/hint2mint/project/version2/components/contact-section/contact-section.html
@@ -9,7 +9,7 @@
 
 
 
-      <form action="form.js" class="p-5 bg-white" method="post">
+      <form action="index.js" class="p-5 bg-white" method="post">
 
         <h2 class="h4 text-black mb-5">Contact Form</h2>
 
