--- a/hint2mint/project/version2/components/about/about.html
+++ b/hint2mint/project/version2/components/about/about.html
@@ -7,7 +7,7 @@
   <div class="row mb-5">
 
     <div class="col-md-5 ml-auto mb-5 order-md-2" data-aos="fade">
-      <img src="images/about.jpg" alt="Image" class="img-fluid rounded">
+      <img src="../../images/about.jpg" alt="Image" class="img-fluid rounded">
     </div>
     <div class="col-md-6 order-md-1" data-aos="fade">
 
