--- a/hint2mint/project/version2/components/headerFooter/page-footer.html
+++ b/hint2mint/project/version2/components/headerFooter/page-footer.html
@@ -9,8 +9,8 @@
           <div class="col-md-3 ml-auto">
             <h2 class="footer-heading mb-4">Features</h2>
             <ul class="list-unstyled">
-              <li><a href="../index.html#about-section">About Us</a></li>
-              <li><a href="../index.html#services-section">Services</a></li>
+              <li><a href="../../index.html#about-section">About Us</a></li>
+              <li><a href="../../index.html#services-section">Services</a></li>
               <li><a href="tandc.html">Terms & Conditions</a></li>
                 <li><a href="disclaimer.html">Disclaimer</a></li>
                 <li><a href="privacy.html">Privacy Policy</a></li>
@@ -30,11 +30,11 @@
       </div>
       <div class="col-md-3">
         <h2 class="footer-heading mb-4">Subscribe Newsletter</h2>
-        <form action="#" method="post">
+        <form action="newsletter.js" method="post">
           <div class="input-group mb-3">
-            <input type="text" class="form-control border-secondary text-white bg-transparent" placeholder="Enter Email" aria-label="Enter Email" aria-describedby="button-addon2">
+            <input type="email" name="newsLetterEmail" id="newsLetterEmail" class="form-control border-secondary text-white bg-transparent" placeholder="Enter Email" aria-label="Enter Email" aria-describedby="button-addon2">
             <div class="input-group-append">
-              <button class="btn btn-primary text-white" type="button" id="button-addon2">Send</button>
+              <button class="btn btn-primary text-white" type="button" id="button-addon2" name="subscribe" value="subscribe" onclick="sendNewsletterMail()">Send</button>
             </div>
           </div>
         </form>
@@ -53,3 +53,34 @@
       
     </div>
   </div>
+  
+  <script src="../../js/jquery-3.3.1.min.js"></script>
+  <script src="../../js/jquery-migrate-3.0.1.min.js"></script>
+  <script src="../../js/jquery-ui.js"></script>
+  <script src="../../js/popper.min.js"></script>
+  <script src="../../js/bootstrap.min.js"></script>
+  <script src="../../js/owl.carousel.min.js"></script>
+  <script src="../../js/jquery.stellar.min.js"></script>
+  <script src="../../js/jquery.countdown.min.js"></script>
+  <script src="../../js/bootstrap-datepicker.min.js"></script>
+  <script src="../../js/jquery.easing.1.3.js"></script>
+  <script src="../../js/aos.js"></script>
+  <script src="../../js/jquery.fancybox.min.js"></script>
+  <script src="../../js/jquery.sticky.js"></script>
+
+  <script src="../../js/typed.js"></script>
+  <script>
+    var typed = new Typed('.typed-words', {
+      strings: ["Web Apps", " WordPress", " Mobile Apps"],
+      typeSpeed: 80,
+      backSpeed: 80,
+      backDelay: 4000,
+      startDelay: 1000,
+      loop: true,
+      showCursor: true
+    });
+  </script>
+  <script src="../../js/newsletter.js"></script>
+  <script src="../../js/smtp.js"></script>
+
+  <script src="../../js/main.js"></script>
