--- a/hint2mint/project/version2/components/blogs/blog-section.html
+++ b/hint2mint/project/version2/components/blogs/blog-section.html
@@ -8,73 +8,41 @@
   <div class="row">
     <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
       <div class="h-entry">
-<<<<<<< HEAD:hint2mint/project/version2/components/blogs/blog-section.html
-        <a href="../pages/blogs/blog1.html"><img
+        <a href="pages/blogs/whichsector.html"><img
             src="https://wealthcoachforwomen.net/wp-content/uploads/2018/07/401k.jpg" alt="Image" class="img-fluid"></a>
-        <h2 class="font-size-regular"><a href="../pages/blogs/blog1.html">Which sector?</a></h2>
-=======
-        <a href="pages/whichsector.html"><img
-            src="https://wealthcoachforwomen.net/wp-content/uploads/2018/07/401k.jpg" alt="Image" class="img-fluid"></a>
-        <h2 class="font-size-regular"><a href="pages/whichsector.html">Which sector?</a></h2>
->>>>>>> cda13aa0adace53587b1672c299a877c323a023c:hint2mint/project/version2/components/blog-section.html
+        <h2 class="font-size-regular"><a href="pages/blogs/whichsector.html">Which sector?</a></h2>
         <div class="meta mb-4">Keshina Goel <span class="mx-2">&bullet;</span> May 20, 2020<span
             class="mx-2">&bullet;</span></div>
         <p>Due to the ongoing pandemic in the entire world the major four industries booming are:
           1. Pharmaceutical industries
           With the virus prevailing there is an enormous demand </p>
-<<<<<<< HEAD:hint2mint/project/version2/components/blogs/blog-section.html
-        <p><a href="../pages/blogs/blog1.html">Continue Reading...</a></p>
-=======
-        <p><a href="pages/whichsector.html">Continue Reading...</a></p>
->>>>>>> cda13aa0adace53587b1672c299a877c323a023c:hint2mint/project/version2/components/blog-section.html
+        <p><a href="pages/blogs/whichsector.html">Continue Reading...</a></p>
       </div>
     </div>
     <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
       <div class="h-entry">
-<<<<<<< HEAD:hint2mint/project/version2/components/blogs/blog-section.html
-        <a href="../pages/blogs/blog2.html"><img
+        <a href="pages/blogs/algorithmictrading.html"><img
             src="https://img.etimg.com/thumb/width-640,height-480,imgsize-56176,resizemode-1,msid-70345874/sensex-nifty-fall-for-4th-day-on-weakness-in-sbi-hdfc-twins.jpg"
             alt="Image" class="img-fluid"></a>
-        <h2 class="font-size-regular"><a href="../pages/blogs/blog2.html">Algorithmic Trading </a></h2>
-=======
-        <a href="pages/blog2.html"><img
-            src="https://img.etimg.com/thumb/width-640,height-480,imgsize-56176,resizemode-1,msid-70345874/sensex-nifty-fall-for-4th-day-on-weakness-in-sbi-hdfc-twins.jpg"
-            alt="Image" class="img-fluid"></a>
-        <h2 class="font-size-regular"><a href="pages/blog2.html">Algorithmic Trading </a></h2>
->>>>>>> cda13aa0adace53587b1672c299a877c323a023c:hint2mint/project/version2/components/blog-section.html
+        <h2 class="font-size-regular"><a href="pages/blogs/algorithmictrading.html">Algorithmic Trading </a></h2>
         <div class="meta mb-4">Kimaya<span class="mx-2">&bullet;</span> May 20, 2020<span class="mx-2">&bullet;</span>
         </div>
-        <p>Nifty includes 50 largest and most liquid companies out of approximately 1600 companies traded on NSE,
-          captures approximately 65% of its float-adjusted</p>
-<<<<<<< HEAD:hint2mint/project/version2/components/blogs/blog-section.html
-        <p><a href="../pages/blogs/blog2.html">Continue Reading...</a></p>
-=======
-        <p><a href="pages/blog2.html">Continue Reading...</a></p>
->>>>>>> cda13aa0adace53587b1672c299a877c323a023c:hint2mint/project/version2/components/blog-section.html
+        <p>The advent of Algorithmic Trading happened in India when, back in 2008, the Securities and Exchange Board of India
+                (SEBI) allowed stockbrokers to offer Direct Market Access (DMA) to their clients.</p>
+        <p><a href="pages/blogs/algorithmictrading.html">Continue Reading...</a></p>
       </div>
     </div>
     <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
       <div class="h-entry">
-<<<<<<< HEAD:hint2mint/project/version2/components/blogs/blog-section.html
-        <a href="../pages/blogs/blog3.html"><img
+        <a href="pages/blogs/relativestrengthindex.html"><img
             src="https://www.pngitem.com/pimgs/m/76-766672_vector-illustration-of-financial-investor-invests-money-cartoon.png"
             alt="Image" class="img-fluid"></a>
-        <h2 class="font-size-regular"><a href="../pages/blogs/blog3.html">Relative Strength Index</a></h2>
-=======
-        <a href="pages/rsi.html"><img
-            src="https://www.pngitem.com/pimgs/m/76-766672_vector-illustration-of-financial-investor-invests-money-cartoon.png"
-            alt="Image" class="img-fluid"></a>
-        <h2 class="font-size-regular"><a href="pages/rsi.html">Relative Strength Index</a></h2>
->>>>>>> cda13aa0adace53587b1672c299a877c323a023c:hint2mint/project/version2/components/blog-section.html
+        <h2 class="font-size-regular"><a href="pages/blogs/relativestrengthindex.html">Relative Strength Index</a></h2>
         <div class="meta mb-4">Keshina Goel <span class="mx-2">&bullet;</span> May 20, 2020<span
             class="mx-2">&bullet;</span></div>
         <p> RSI is a momentum oscillator that measures the speed and change of price movements which Generally, when RSI
           goes beyond the 70</p>
-<<<<<<< HEAD:hint2mint/project/version2/components/blogs/blog-section.html
-        <p><a href="../pages/blogs/blog3.html">Continue Reading...</a></p>
-=======
-        <p><a href="pages/rsi.html">Continue Reading...</a></p>
->>>>>>> cda13aa0adace53587b1672c299a877c323a023c:hint2mint/project/version2/components/blog-section.html
+        <p><a href="pages/blogs/relativestrengthindex.html">Continue Reading...</a></p>
       </div>
     </div>
 
