--- a/hint2mint/project/version2/components/testimonials/testimonial.html
+++ b/hint2mint/project/version2/components/testimonials/testimonial.html
@@ -20,7 +20,7 @@
 
       <figure class="mb-4 d-flex align-items-center justify-content-center">
 
-        <div><img src="images/default-person.png" alt="Image" class="w-50 img-fluid mb-3"></div>
+        <div><img src="images/testimonials/person_5.jpg" alt="Image" class="w-50 img-fluid mb-3"></div>
 
         <p>Nimisha Sharaff</p>
       </figure>
@@ -37,11 +37,7 @@
       </blockquote>
       <figure class="mb-4 d-flex align-items-center justify-content-center">
 
-<<<<<<< HEAD:hint2mint/project/version2/components/testimonials/testimonial.html
-        <div><img src="../images/person_3.jpg" alt="Image" class="w-50 img-fluid mb-3"></div>
-=======
-        <div><img src="images/default-person.png" alt="Image" class="w-50 img-fluid mb-3"></div>
->>>>>>> cda13aa0adace53587b1672c299a877c323a023c:hint2mint/project/version2/components/testimonial.html
+        <div><img src="images/testimonials/person_3.jpg" alt="Image" class="w-50 img-fluid mb-3"></div>
 
         <p>Aayush Jain</p>
       </figure>
@@ -61,11 +57,7 @@
       </blockquote>
       <figure class="mb-4 d-flex align-items-center justify-content-center">
 
-<<<<<<< HEAD:hint2mint/project/version2/components/testimonials/testimonial.html
-        <div><img src="../images/person_4.jpg" alt="Image" class="w-50 img-fluid mb-3"></div>
-=======
-        <div><img src="images/default-person.png" alt="Image" class="w-50 img-fluid mb-3"></div>
->>>>>>> cda13aa0adace53587b1672c299a877c323a023c:hint2mint/project/version2/components/testimonial.html
+        <div><img src="images/testimonials/person_4.jpg" alt="Image" class="w-50 img-fluid mb-3"></div>
 
         <p>Shadab</p>
       </figure>
