--- a/hint2mint/project/version2/components/headerFooter/page-footer.html
+++ b/hint2mint/project/version2/components/headerFooter/page-footer.html
@@ -11,9 +11,9 @@
             <ul class="list-unstyled">
               <li><a href="../../index.html#about-section">About Us</a></li>
               <li><a href="../../index.html#services-section">Services</a></li>
-              <li><a href="tandc.html">Terms & Conditions</a></li>
-                <li><a href="disclaimer.html">Disclaimer</a></li>
-                <li><a href="privacy.html">Privacy Policy</a></li>
+              <li><a href="../../pages/footer/tandc.html">Terms & Conditions</a></li>
+                <li><a href="../../pages/footer/disclaimer.html">Disclaimer</a></li>
+                <li><a href="../../pages/footer/privacy.html">Privacy Policy</a></li>
               
             </ul>
           </div>
