--- a/hint2mint/project/version2/css/style.css
+++ b/hint2mint/project/version2/css/style.css
@@ -2093,3 +2093,9 @@ font-size: 2.5rem; }
 .bg-white .scrolled {
   background: transparent !important;
 }
+.bgimg{
+  background-image: url('../images/cover/cover.jpg');
+  background-size: 100% 100%;
+  width: 100%;
+  height: 660px;
+}
