--- a/hint2mint/project/version2/components/headerFooter/index-footer.html
+++ b/hint2mint/project/version2/components/headerFooter/index-footer.html
@@ -15,11 +15,11 @@
                 <div class="col-md-3 ml-auto">
                     <h2 class="footer-heading mb-4">Features</h2>
                     <ul class="list-unstyled">
-                        <li><a href="#about-section">About Us</a></li>
-                        <li><a href="#services-section">Services</a></li>
-                        <li><a href="pages/tandc.html">Terms & Conditions</a></li>
-                        <li><a href="pages/disclaimer.html">Disclaimer</a></li>
-                        <li><a href="pages/privacy.html">Privacy Policy</a></li>
+                        <li><a href="#about-section">About Section</a></li>
+                        <li><a href="#services-section">Services Section</a></li>
+                        <li><a href="pages/footer/tandc.html">Terms & Conditions</a></li>
+                        <li><a href="pages/footer/disclaimer.html">Disclaimer</a></li>
+                        <li><a href="pages/footer/privacy.html">Privacy Policy</a></li>
 
                     </ul>
                 </div>
