CR : services to legal section

--- a/hint2mint/project/version2/components/headerFooter/index-footer.html
+++ b/hint2mint/project/version2/components/headerFooter/index-footer.html
@@ -13,10 +13,10 @@
                         management.</p>
                 </div>
                 <div class="col-md-3 ml-auto">
-                    <h2 class="footer-heading mb-4">Features</h2>
+                    <h2 class="footer-heading mb-4">Legal Section</h2>
                     <ul class="list-unstyled">
-                        <li><a href="#about-section">About Section</a></li>
-                        <li><a href="#services-section">Services Section</a></li>
+                        <!-- <li><a href="#about-section">About Section</a></li>
+                        <li><a href="#services-section">Services Section</a></li> -->
                         <li><a href="pages/footer/tandc.html">Terms & Conditions</a></li>
                         <li><a href="pages/footer/disclaimer.html">Disclaimer</a></li>
                         <li><a href="pages/footer/privacy.html">Privacy Policy</a></li>
@@ -57,8 +57,7 @@
             <div class="border-top pt-5">
                 <p>
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                    Copyright &copy;2020 All rights reserved <i class="icon-heart text-danger" aria-hidden="true"></i> <a
-                        href="https://colorlib.com" target="_blank"></a>
+                    Copyright &copy;2020 All rights reserved <a href="https://colorlib.com" target="_blank">!</a>
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                 </p>
             </div>
