--- a/hint2mint/project/version2/components/headerFooter/page-footer.html
+++ b/hint2mint/project/version2/components/headerFooter/page-footer.html
@@ -1,86 +1,64 @@
 <div class="container">
-    <div class="row">
-      <div class="col-md-9">
-        <div class="row">
-          <div class="col-md-5">
-            <h2 class="footer-heading mb-4">About Us</h2>
-            <p>We at Hint2Mint are committed to spread financial awareness at large. Along with the management of your finances, we are always committed to enhance your financial education in the form of webinars and seminars from basic understanding of finance to the heights of complex professional aspects of financial management.</p>
-          </div>
-          <div class="col-md-3 ml-auto">
-            <h2 class="footer-heading mb-4">Features</h2>
-            <ul class="list-unstyled">
-              <li><a href="../../index.html#about-section">About Us</a></li>
-              <li><a href="../../index.html#services-section">Services</a></li>
-              <li><a href="../../pages/footer/tandc.html">Terms & Conditions</a></li>
-                <li><a href="../../pages/footer/disclaimer.html">Disclaimer</a></li>
-                <li><a href="../../pages/footer/privacy.html">Privacy Policy</a></li>
-              
-            </ul>
-          </div>
-          <div class="col-md-3">
-            <h2 class="footer-heading mb-4">Follow Us</h2>
-            <a href="https://www.facebook.com/pages/category/Product-Service/Hint2Mint-107676550799236/" class="pl-0 pr-2"><span class="icon-facebook"></span></a>
-            <a href="https://twitter.com/chariotfinserve" class="pl-0 pr-2"><span class="icon-twitter"></span></a>
-            <a href="https://www.instagram.com/hint2mint/" class="pl-0 pr-2"><span class="icon-instagram"></span></a>
-            <a href="https://www.linkedin.com/company/hint2mint/?viewAsMember=true" class="pl-0 pr-2"><span class="icon-linkedin"></span></a>
-            <a href="https://www.youtube.com/channel/UCL6KvnZOYKuY9np9TYIHyIQ" class="pl-0 pr-2"><span class="icon-youtube"></span></a>
-
-          </div>
+  <div class="row">
+    <div class="col-md-9">
+      <div class="row">
+        <div class="col-md-5">
+          <h2 class="footer-heading mb-4">About Us</h2>
+          <p>We at Hint2Mint are committed to spread financial awareness at large. Along with the management of your
+            finances, we are always committed to enhance your financial education in the form of webinars and seminars
+            from basic understanding of finance to the heights of complex professional aspects of financial management.
+          </p>
         </div>
-      </div>
-      <div class="col-md-3">
-        <h2 class="footer-heading mb-4">Subscribe Newsletter</h2>
-        <form action="newsletter.js" method="post">
-          <div class="input-group mb-3">
-            <input type="email" name="newsLetterEmail" id="newsLetterEmail" class="form-control border-secondary text-white bg-transparent" placeholder="Enter Email" aria-label="Enter Email" aria-describedby="button-addon2">
-            <div class="input-group-append">
-              <button class="btn btn-primary text-white" type="button" id="button-addon2" name="subscribe" value="subscribe" onclick="sendNewsletterMail()">Send</button>
-            </div>
-          </div>
-        </form>
+        <div class="col-md-3 ml-auto">
+          <h2 class="footer-heading mb-4">Legal Section</h2>
+          <ul class="list-unstyled">
+            <!-- <li><a href="../../index.html#about-section">About Us</a></li>
+              <li><a href="../../index.html#services-section">Services</a></li> -->
+            <li><a href="../../pages/footer/tandc.html">Terms & Conditions</a></li>
+            <li><a href="../../pages/footer/disclaimer.html">Disclaimer</a></li>
+            <li><a href="../../pages/footer/privacy.html">Privacy Policy</a></li>
+
+          </ul>
+        </div>
+        <div class="col-md-3">
+          <h2 class="footer-heading mb-4">Follow Us</h2>
+          <a href="https://www.facebook.com/pages/category/Product-Service/Hint2Mint-107676550799236/"
+            class="pl-0 pr-2"><span class="icon-facebook"></span></a>
+          <a href="https://twitter.com/chariotfinserve" class="pl-0 pr-2"><span class="icon-twitter"></span></a>
+          <a href="https://www.instagram.com/hint2mint/" class="pl-0 pr-2"><span class="icon-instagram"></span></a>
+          <a href="https://www.linkedin.com/company/hint2mint/?viewAsMember=true" class="pl-0 pr-2"><span
+              class="icon-linkedin"></span></a>
+          <a href="https://www.youtube.com/channel/UCL6KvnZOYKuY9np9TYIHyIQ" class="pl-0 pr-2"><span
+              class="icon-youtube"></span></a>
+
+        </div>
       </div>
     </div>
-    <div class="row pt-5 mt-5 text-center">
-      <div class="col-md-12">
-        <div class="border-top pt-5">
-        <p>
-        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-        Copyright &copy;2020 All rights reserved <i class="icon-heart text-danger" aria-hidden="true"></i>  <a href="https://colorlib.com" target="_blank" ></a>
-        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-        </p>
+    <div class="col-md-3">
+      <h2 class="footer-heading mb-4">Subscribe Newsletter</h2>
+      <form action="newsletter.js" method="post">
+        <div class="input-group mb-3">
+          <input type="email" name="newsLetterEmail" id="newsLetterEmail"
+            class="form-control border-secondary text-white bg-transparent" placeholder="Enter Email"
+            aria-label="Enter Email" aria-describedby="button-addon2">
+          <div class="input-group-append">
+            <button class="btn btn-primary text-white" type="button" id="button-addon2" name="subscribe"
+              value="subscribe" onclick="sendNewsletterMail()">Send</button>
+          </div>
         </div>
-      </div>
-      
+      </form>
     </div>
   </div>
-  
-  <script src="../../js/jquery-3.3.1.min.js"></script>
-  <script src="../../js/jquery-migrate-3.0.1.min.js"></script>
-  <script src="../../js/jquery-ui.js"></script>
-  <script src="../../js/popper.min.js"></script>
-  <script src="../../js/bootstrap.min.js"></script>
-  <script src="../../js/owl.carousel.min.js"></script>
-  <script src="../../js/jquery.stellar.min.js"></script>
-  <script src="../../js/jquery.countdown.min.js"></script>
-  <script src="../../js/bootstrap-datepicker.min.js"></script>
-  <script src="../../js/jquery.easing.1.3.js"></script>
-  <script src="../../js/aos.js"></script>
-  <script src="../../js/jquery.fancybox.min.js"></script>
-  <script src="../../js/jquery.sticky.js"></script>
+  <div class="row pt-5 mt-5 text-center">
+    <div class="col-md-12">
+      <div class="border-top pt-5">
+        <p>
+          <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+          Copyright &copy;2020 All rights reserved <a href="https://colorlib.com" target="_blank">!</a>
+          <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+        </p>
+      </div>
+    </div>
 
-  <script src="../../js/typed.js"></script>
-  <script>
-    var typed = new Typed('.typed-words', {
-      strings: ["Web Apps", " WordPress", " Mobile Apps"],
-      typeSpeed: 80,
-      backSpeed: 80,
-      backDelay: 4000,
-      startDelay: 1000,
-      loop: true,
-      showCursor: true
-    });
-  </script>
-  <script src="../../js/newsletter.js"></script>
-  <script src="../../js/smtp.js"></script>
-
-  <script src="../../js/main.js"></script>
+  </div>
+</div>
