--- a/hint2mint/project/version2/components/about/about.html
+++ b/hint2mint/project/version2/components/about/about.html
@@ -43,7 +43,7 @@
             <div class="unit-4-icon mr-4 mb-3"><span class="text-secondary icon-extension"></span></div>
             <div>
               <h3>Awareness</h3>
-              <p>At Hint2Mint are committed to spread financial awareness at large.</p>
+              <p>We At Hint2Mint are committed to spread financial awareness at large.</p>
 
             </div>
           </div>
