our work: videos

--- a/hint2mint/project/version2/components/work-section/work-section.html
+++ b/hint2mint/project/version2/components/work-section/work-section.html
@@ -17,33 +17,23 @@
         </div>
       </a>
     </div>
-    <div class="col-md-6 col-lg-4">
-      <a href="images/works/img_2.jpg" class="media-1" data-fancybox="gallery">
-        <img src="images/works/img_2.jpg" alt="Image" class="img-fluid">
-        <div class="media-1-content">
-          <h2>Requirements</h2>
-          <span class="category">KYC documents</span>
-        </div>
-      </a>
+    <div class="col-md-6 col-lg-4"><video width="419" height="419" controls>
+      <source src="videos/our works/SakshiWebinar.mp4" type="video/mp4" class="media-1" data-fancybox="gallery">
+    </video>
+        <source src="videos/our works/SakshiWebinar.mp4" alt="video" class="img-fluid">
+        </a>
     </div>
-    <div class="col-md-6 col-lg-4">
-      <a href="images/works/img_3.jpg" class="media-1" data-fancybox="gallery">
-        <img src="images/works/img_3.jpg" alt="Image" class="img-fluid">
-        <div class="media-1-content">
-          <h2>Key point</h2>
-          <span class="category">to remember</span>
-        </div>
-      </a>
+    <div class="col-md-6 col-lg-4"><video width="419" height="419" controls>
+      <source src="videos/our works/KMVWebinarTrailer.mp4" type="video/mp4" class="media-1" data-fancybox="gallery">
+    </video>
+        <source src="videos/our works/KMVWebinarTrailer.mp4" alt="video" class="img-fluid">
+        </a>
     </div>
-
-    <div class="col-md-6 col-lg-4">
-      <a href="images/works/img_4.jpg" class="media-1" data-fancybox="gallery">
-        <img src="images/works/img_4.jpg" alt="Image" class="img-fluid">
-        <div class="media-1-content">
-          <h2>The Art of Investing</h2>
-          <span class="category">Webinar</span>
-        </div>
-      </a>
+    <div class="col-md-6 col-lg-4"><video width="419" height="419" controls>
+      <source src="videos/our works/PDTrailer.mp4" type="video/mp4" class="media-1" data-fancybox="gallery">
+    </video>
+        <source src="videos/our works/PDTrailer.mp4" alt="video" class="img-fluid">
+        </a>
     </div>
     <div class="col-md-6 col-lg-4">
       <a href="images/works/img_5.jpg" class="media-1" data-fancybox="gallery">
