--- a/hint2mint/project/version2/components/site-section/site-section.html
+++ b/hint2mint/project/version2/components/site-section/site-section.html
@@ -4,13 +4,7 @@
       <div class="p-3 box-with-humber">
         <div class="number-behind">01.</div>
         <h2 class="text-primary"> Vision</h2>
-        <p class="mb-4">Hint2Mint has been formed with the aim of helping individuals, in achieving their dreams by
-          empowering them.</p>
-        <ul class="list-unstyled ul-check primary">
-          <li>Customer Experience</li>
-          <li>Product Management</li>
-          <li>Proof of Concept</li>
-        </ul>
+        <p class="mb-4">Hint2Mint has been formed with the aim of helping individuals,in achieving their dreams by empowering them with spreading the financial know how, professional guidance at every step,career counselling and personalised service offerings. We also see a vision to transform our young talented minds by completely overhauling their personality through our personality developments programmes. </p>
       </div>
     </div>
 
@@ -18,13 +12,9 @@
       <div class="p-3 box-with-humber">
         <div class="number-behind">02.</div>
         <h2 class="text-primary">Mission</h2>
-        <p class="mb-4">The main aim of our organisation is to transform the personality of our young and talented minds
-          which are the future of our nation.</p>
-        <ul class="list-unstyled ul-check primary">
-          <li>Career Counselling</li>
-          <li>Improving Presentation skills</li>
-          <li>Improving interview skills</li>
-        </ul>
+        <p class="mb-4">The main aim of our organisation is to transform the personality of our young and talented minds which are the future of our nation and make them industry-ready by providing them with the knowledge of higher sets of financial areas. 
+          Our mission involves motivating today’s professional world by keeping them abreast with the current affairs, organising various interactive sessions with corporate gurus, helping them to have a stress-free lifestyle by imparting knowledge about various forms of meditational techniques& spiritual guidance.
+          </p>
       </div>
     </div>
 
@@ -34,12 +24,7 @@
         <h2 class="text-primary">Inculcating Meditation and Spiritual Know-How</h2>
         <p class="mb-4">We truly understand the importance of the well being of your mind and health so as to excel
           while striking a balance with the blend of spiritual connect and proficiency.</p>
-        <ul class="list-unstyled ul-check primary">
-          <li>Social Media</li>
-          <li>Paid Campaigns</li>
-          <li>Marketing &amp; SEO</li>
-        </ul>
-      </div>
+       </div>
     </div>
   </div>
 </div>
