--- a/hint2mint/project/version2/components/services/services-section.html
+++ b/hint2mint/project/version2/components/services/services-section.html
@@ -28,8 +28,8 @@
       <div class="unit-4 d-flex">
         <div class="unit-4-icon mr-4"><span class="text-primary icon-question_answer"></span></div>
         <div>
-          <h3>Finacial Advisory</h3>
-          <p>Let's learn and reinvent how financial advisory can double up your gains and help you grow.</p>
+          <h3>Finacial courses</h3>
+          <p>Let's learn and reinvent how financial courses can double up your knowledge and help you grow.</p>
         </div>
       </div>
     </div>
