blog images updated

--- a/hint2mint/project/version2/components/blogs/blog-section.html
+++ b/hint2mint/project/version2/components/blogs/blog-section.html
@@ -9,7 +9,7 @@
     <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
       <div class="h-entry">
         <a href="pages/blogs/whichsector.html"><img
-            src="https://wealthcoachforwomen.net/wp-content/uploads/2018/07/401k.jpg" alt="Image" class="img-fluid"></a>
+            src="images/blogs/which secotor/Sector.png" alt="Image" class="img-fluid"></a>
         <h2 class="font-size-regular"><a href="pages/blogs/whichsector.html">Which sector?</a></h2>
         <div class="meta mb-4">Keshina Goel <span class="mx-2">&bullet;</span> May 20, 2020<span
             class="mx-2">&bullet;</span></div>
@@ -22,8 +22,7 @@
     <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
       <div class="h-entry">
         <a href="pages/blogs/algorithmictrading.html"><img
-            src="https://img.etimg.com/thumb/width-640,height-480,imgsize-56176,resizemode-1,msid-70345874/sensex-nifty-fall-for-4th-day-on-weakness-in-sbi-hdfc-twins.jpg"
-            alt="Image" class="img-fluid"></a>
+            src="images/blogs/algorithmictrading/algo.png"  alt="Image" class="img-fluid"></a>
         <h2 class="font-size-regular"><a href="pages/blogs/algorithmictrading.html">Algorithmic Trading </a></h2>
         <div class="meta mb-4">Kimaya<span class="mx-2">&bullet;</span> May 20, 2020<span class="mx-2">&bullet;</span>
         </div>
@@ -35,8 +34,7 @@
     <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
       <div class="h-entry">
         <a href="pages/blogs/relativestrengthindex.html"><img
-            src="https://www.pngitem.com/pimgs/m/76-766672_vector-illustration-of-financial-investor-invests-money-cartoon.png"
-            alt="Image" class="img-fluid"></a>
+            src="images/blogs/relativestrengthindex/rsi.png"  alt="Image" class="img-fluid"></a>
         <h2 class="font-size-regular"><a href="pages/blogs/relativestrengthindex.html">Relative Strength Index</a></h2>
         <div class="meta mb-4">Keshina Goel <span class="mx-2">&bullet;</span> May 20, 2020<span
             class="mx-2">&bullet;</span></div>
