--- a/hint2mint/project/version2/css/style.css
+++ b/hint2mint/project/version2/css/style.css
@@ -1976,11 +1976,11 @@ font-size: 2.5rem; }
 border-top: 1px solid #edf0f5 !important; }
 
 .site-footer {
-padding: 4em 0;
+padding: 4em 0 1em 0;
 background: #333333; }
 @media (min-width: 768px) {
   .site-footer {
-    padding: 8em 0; } }
+    padding: 6em 0 1em 0; } }
 .site-footer .border-top {
   border-top: 1px solid rgba(255, 255, 255, 0.1) !important; }
 .site-footer p {
