--- a/hint2mint/project/version2/components/work-section/work-section.html
+++ b/hint2mint/project/version2/components/work-section/work-section.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row mb-5 justify-content-center">
     <div class="col-md-8 text-center">
-      <h2 class="text-black h1 site-section-heading text-center">Our Works</h2>
+      <h2 class="text-black h1 site-section-heading text-center">Our Work</h2>
 
     </div>
   </div>
