--- a/hint2mint/project/version2/components/blogs/blog-section.html
+++ b/hint2mint/project/version2/components/blogs/blog-section.html
@@ -24,7 +24,7 @@
         <a href="pages/blogs/algorithmictrading.html"><img
             src="images/blogs/algorithmictrading/algo.png"  alt="Image" class="img-fluid"></a>
         <h2 class="font-size-regular"><a href="pages/blogs/algorithmictrading.html">Algorithmic Trading </a></h2>
-        <div class="meta mb-4">Kimaya<span class="mx-2">&bullet;</span> May 20, 2020<span class="mx-2">&bullet;</span>
+        <div class="meta mb-4">Kimaya Patil<span class="mx-2">&bullet;</span> May 20, 2020<span class="mx-2">&bullet;</span>
         </div>
         <p>The advent of Algorithmic Trading happened in India when, back in 2008, the Securities and Exchange Board of India
                 (SEBI) allowed stockbrokers to offer Direct Market Access (DMA) to their clients.</p>
