--- a/hint2mint/project/UI/css/it.css
+++ b/hint2mint/project/UI/css/it.css
@@ -1,7 +1,7 @@
 
 
 .bgimg{
-    background-image: url('../images/coverimg/cover.jpg');
+    background-image: url('../images/coverimg/web1.png');
     background-size: 100% 100%;
     width: 100%;
     height: 660px;
@@ -161,4 +161,16 @@ body {
 #client-testimonial-carousel {min-height: 300px;}
 .testimonials{
   margin-top: 100px;
+}
+.ourservices{
+  padding: 200px 0px 60px;
+}
+.rowsetting{
+  margin: 80px 0px !important;
+}
+.imgsetting{
+  text-align: justify;
+}
+.imgsetting i{
+  color: #4CAF50;
 }
