--- a/hint2mint/project/version2/components/about/about.html
+++ b/hint2mint/project/version2/components/about/about.html
@@ -1,3 +1,4 @@
+
 <div class="container">
   <div class="col-12">
     <div class="text-left pb-1">
@@ -16,7 +17,7 @@
 
 
         <div class="col-12 mb-4">
-          <p class="lead">Here, at Hint2Mint, we understand and focus on the two main financial decorum of life which
+          <p>Here, at Hint2Mint, we understand and focus on the two main financial decorum of life which
             are –
             “
             TIME VALUE OF YOUR MONEY” – an exhibit of life which signifies the always growing sentiment of your money
