--- a/hint2mint/project/version2/components/blogs/blog-section.html
+++ b/hint2mint/project/version2/components/blogs/blog-section.html
@@ -10,8 +10,8 @@
       <div class="h-entry">
         <a href="pages/blogs/whichsector.html"><img
             src="images/blogs/which secotor/Sector.png" alt="Image" class="img-fluid"></a>
-        <h2 class="font-size-regular"><a href="pages/blogs/whichsector.html">Which sector?</a></h2>
-        <div class="meta mb-4">Keshina Goel <span class="mx-2">&bullet;</span> May 20, 2020<span
+        <h2 class="font-size-regular"><a href="pages/blogs/whichsector.html"><strong>Which sector?</strong></a></h2>
+         <div class="team-color">Keshina Goel <span class="mx-2">&bullet;</span> May 20, 2020<span
             class="mx-2">&bullet;</span></div>
         <p>Due to the ongoing pandemic in the entire world the major four industries booming are:
           1. Pharmaceutical industries
@@ -22,9 +22,9 @@
     <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
       <div class="h-entry">
         <a href="pages/blogs/algorithmictrading.html"><img
-            src="images/blogs/algorithmictrading/algo.png"  alt="Image" class="img-fluid"></a>
-        <h2 class="font-size-regular"><a href="pages/blogs/algorithmictrading.html">Algorithmic Trading </a></h2>
-        <div class="meta mb-4">Kimaya Patil<span class="mx-2">&bullet;</span> May 20, 2020<span class="mx-2">&bullet;</span>
+            src="images/blogs/algorithmictrading/web2.png"  alt="Image" class="img-fluid"></a>
+        <h2 class="font-size-regular"><a href="pages/blogs/algorithmictrading.html"><strong>Algorithmic Trading </strong></a></h2>
+        <div class="team-color">Kimaya Patil<span class="mx-2">&bullet;</span> May 20, 2020<span class="mx-2">&bullet;</span>
         </div>
         <p>The advent of Algorithmic Trading happened in India when, back in 2008, the Securities and Exchange Board of India
                 (SEBI) allowed stockbrokers to offer Direct Market Access (DMA) to their clients.</p>
@@ -35,8 +35,8 @@
       <div class="h-entry">
         <a href="pages/blogs/relativestrengthindex.html"><img
             src="images/blogs/relativestrengthindex/rsi.png"  alt="Image" class="img-fluid"></a>
-        <h2 class="font-size-regular"><a href="pages/blogs/relativestrengthindex.html">Relative Strength Index</a></h2>
-        <div class="meta mb-4">Keshina Goel <span class="mx-2">&bullet;</span> May 20, 2020<span
+        <h2 class="font-size-regular"><a href="pages/blogs/relativestrengthindex.html"><strong>Relative Strength Index</strong></a></h2>
+        <div class="team-color">Keshina Goel <span class="mx-2">&bullet;</span> May 20, 2020<span
             class="mx-2">&bullet;</span></div>
         <p> RSI is a momentum oscillator that measures the speed and change of price movements which Generally, when RSI
           goes beyond the 70</p>
