--- a/hint2mint/project/version2/components/team/team-section.html
+++ b/hint2mint/project/version2/components/team/team-section.html
@@ -14,11 +14,11 @@
     </div>
     <div class="row">
     <center>
-    <div class="col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="300">
+    <div class="col-md-6 col-lg-4 <mb-5 mb-lg-0" data-aos="fade" data-aos-delay="300">
       <div class="person text-center">
         <img src="images/team/image1.jpeg" alt="Image" class="img-fluid rounded-circle w-50 mb-5">
-        <h3>Dixita Jain</h3>
-        <p class="position text-muted">Founder & Director</p>
+      <h3><strong>Dixita Jain</strong></h3>
+        <p class="position team-color">Founder & Director</p>
         <p class="mb-4">Experienced Research Analyst and Assurance Associate with a demonstrated history of working in the Corporate world. 
           Worked with EY for three years and with Evalueserve with a year 
           Proficient French language expert</p>
