--- a/hint2mint/project/version2/css/style.css
+++ b/hint2mint/project/version2/css/style.css
@@ -1,7 +1,7 @@
 /* Base */
 body {
   line-height: 1.7;
-  color: #4d4d4d;
+  color: #000000;
   font-weight: 400;
   font-size: 1rem; }
 
@@ -2090,4 +2090,7 @@ font-size: 2.5rem; }
         @media (min-width: 768px) {
           .site-section-heading {
             font-size: 3rem; } }
-
+.team-color{
+  color: #212529;
+  font-size: small;
+}
