--- a/hint2mint/manual/base template/create/css/style.css
+++ b/hint2mint/manual/base template/create/css/style.css
@@ -1337,7 +1337,7 @@ h1, h2, h3, h4, h5,
   font-size: 1rem !important; }
 
 .text-muted {
-  color: #ccc !important;
+  color: rgb(22, 22, 22) !important;
   font-size: 12px;
   text-transform: uppercase; }
 
