--- a/hint2mint/project/pilot/css/style.css
+++ b/hint2mint/project/pilot/css/style.css
@@ -1338,7 +1338,7 @@ h1, h2, h3, h4, h5,
   font-size: 1rem !important; }
 
 .text-muted {
-  color: #ccc !important;
+  color: rgb(44, 44, 44) !important;
   font-size: 12px;
   text-transform: uppercase; }
 
