--- a/hint2mint/project/version2/components/team/team-section.html
+++ b/hint2mint/project/version2/components/team/team-section.html
@@ -18,7 +18,7 @@
       <div class="person text-center">
         <img src="images/team/image1.jpeg" alt="Image" class="img-fluid rounded-circle w-50 mb-5">
       <h3><strong>Dixita Jain</strong></h3>
-        <p class="position team-color">Founder & Director</p>
+        <p class="position hint">Founder & Director</p>
         <p class="mb-4">Experienced Research Analyst and Assurance Associate with a demonstrated history of working in the Corporate world. 
           Worked with EY for three years and with Evalueserve with a year 
           Proficient French language expert</p>
