--- a/hint2mint/project/version2/components/blogs/blog-section.html
+++ b/hint2mint/project/version2/components/blogs/blog-section.html
@@ -11,7 +11,7 @@
         <a href="pages/blogs/whichsector.html"><img
             src="images/blogs/which secotor/Sector.png" alt="Image" class="img-fluid"></a>
         <h2 class="font-size-regular"><a href="pages/blogs/whichsector.html"><strong>Which sector?</strong></a></h2>
-         <div class="team-color">Keshina Goel <span class="mx-2">&bullet;</span> May 20, 2020<span
+         <div class="hint">Keshina Goel <span class="mx-2">&bullet;</span> May 20, 2020<span
             class="mx-2">&bullet;</span></div>
         <p>Due to the ongoing pandemic in the entire world the major four industries booming are:
           1. Pharmaceutical industries
@@ -24,7 +24,7 @@
         <a href="pages/blogs/algorithmictrading.html"><img
             src="images/blogs/algorithmictrading/web2.png"  alt="Image" class="img-fluid"></a>
         <h2 class="font-size-regular"><a href="pages/blogs/algorithmictrading.html"><strong>Algorithmic Trading </strong></a></h2>
-        <div class="team-color">Kimaya Patil<span class="mx-2">&bullet;</span> May 20, 2020<span class="mx-2">&bullet;</span>
+        <div class="hint">Kimaya Patil<span class="mx-2">&bullet;</span> May 20, 2020<span class="mx-2">&bullet;</span>
         </div>
         <p>The advent of Algorithmic Trading happened in India when, back in 2008, the Securities and Exchange Board of India
                 (SEBI) allowed stockbrokers to offer Direct Market Access (DMA) to their clients.</p>
@@ -36,7 +36,7 @@
         <a href="pages/blogs/relativestrengthindex.html"><img
             src="images/blogs/relativestrengthindex/rsi.png"  alt="Image" class="img-fluid"></a>
         <h2 class="font-size-regular"><a href="pages/blogs/relativestrengthindex.html"><strong>Relative Strength Index</strong></a></h2>
-        <div class="team-color">Keshina Goel <span class="mx-2">&bullet;</span> May 20, 2020<span
+        <div class="hint">Keshina Goel <span class="mx-2">&bullet;</span> May 20, 2020<span
             class="mx-2">&bullet;</span></div>
         <p> RSI is a momentum oscillator that measures the speed and change of price movements which Generally, when RSI
           goes beyond the 70</p>
